--- a/src/pages/fav-list/dr-fav-list.html
+++ b/src/pages/fav-list/dr-fav-list.html
@@ -22,7 +22,8 @@
 
     <ion-buttons style="display: flex; direction: row;" end>
       <button ion-button menuToggle end>
-        <ion-icon name="menu"></ion-icon>
+        <!-- <ion-icon name="menu"></ion-icon> -->
+      <img src="assets/img/avatar.png" class="avatar-menu-icon">
       </button>     
       
       <span *ngIf="this.platform.dir() === 'rtl' && this.mainFunc.manuno8 == false">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>  
