--- a/src/pages/brands-stores/brands-stores.html
+++ b/src/pages/brands-stores/brands-stores.html
@@ -3,7 +3,8 @@
   <ion-navbar color="darkprimary">
     <ion-buttons style="display: flex; direction: row;" end>
       <button ion-button menuToggle>
-          <ion-icon name="menu"></ion-icon>
+          <!-- <ion-icon name="menu"></ion-icon> -->
+      <img src="assets/img/avatar.png" class="avatar-menu-icon">
       </button>
     </ion-buttons>
     <ion-title text-center>{{ name }}</ion-title>
