--- a/src/pages/faq/faq.html
+++ b/src/pages/faq/faq.html
@@ -4,7 +4,8 @@
   <ion-navbar color="darkprimary">
     <ion-buttons style="display: flex; direction: row;" end>
       <button ion-button menuToggle>
-          <ion-icon name="menu"></ion-icon>
+          <!-- <ion-icon name="menu"></ion-icon> -->
+      <img src="assets/img/avatar.png" class="avatar-menu-icon">
       </button>
     </ion-buttons>
     <ion-title text-center>{{ 'FAQ_TITLE' | translate:param }}</ion-title>
