--- a/src/pages/match-making/match-making.html
+++ b/src/pages/match-making/match-making.html
@@ -12,7 +12,8 @@
     <!-- <img class="homeLogo" src="assets/img/homelogo.png"> -->
     <ion-buttons style="display: flex; direction: row;" end>
       <button ion-button menuToggle end>
-        <ion-icon name="menu"></ion-icon>
+        <!-- <ion-icon name="menu"></ion-icon> -->
+      <img src="assets/img/avatar.png" class="avatar-menu-icon">
       </button>
       <button ion-button (tap)="showSearchBar()" end>
           <ion-icon name="search"></ion-icon>
