--- a/src/pages/search-result/search-result.html
+++ b/src/pages/search-result/search-result.html
@@ -11,7 +11,8 @@
     <ion-title>{{ 'SEARCH' | translate:param }}</ion-title>
     <ion-buttons style="display: flex; direction: row;" end>
       <button ion-button menuToggle end>
-        <ion-icon name="menu"></ion-icon>
+        <!-- <ion-icon name="menu"></ion-icon> -->
+      <img src="assets/img/avatar.png" class="avatar-menu-icon">
       </button>
       <span *ngIf="this.platform.dir() === 'rtl' && this.mainFunc.manuno8 == false">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>  
       <span *ngIf="this.platform.dir() === 'ltr' && this.mainFunc.manuno8 == false">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
