--- a/src/pages/faq/faq.html
+++ b/src/pages/faq/faq.html
@@ -2,7 +2,7 @@
 <ion-header class="header" dir="{{direc}}" no-border>
     
   <ion-navbar color="darkprimary">
-    <ion-buttons style="display: flex; direction: row;" end>
+    <ion-buttons style="display: flex; direction: row;" right>
       <button ion-button menuToggle>
           <!-- <ion-icon name="menu"></ion-icon> -->
       <img src="assets/img/avatar.png" class="avatar-menu-icon">
