--- a/src/pages/courses-details/courses-details.html
+++ b/src/pages/courses-details/courses-details.html
@@ -1,7 +1,7 @@
 <ion-header class="header"  dir="{{direc}}" no-border>
 
     <ion-navbar color="darkprimary">
-      <ion-buttons style="display: flex; direction: row;" end>
+      <ion-buttons style="display: flex; direction: row;" left>
         <button ion-button start>
             <ion-badge color="danger" *ngIf="mainFunc.getCartItemsNumber()" item-end>{{mainFunc.getCartItemsNumber()}}</ion-badge>
             <ion-icon name="md-cart" *ngIf="this.mainFunc.manuno8 == false"></ion-icon>
