--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,19 +1,19 @@
 <ion-header *ngIf="this.platform.dir() === 'rtl'" class="header" dir="ltr" no-border>
   <ion-navbar class="ion-navbar" color="darkprimary" *ngIf="!isSearchToggle">
-    <ion-buttons style="display: flex; direction: row;" end>
-      <button ion-button *ngIf="this.mainFunc.manuno8 == false" (tap)="openCartPage2()" start>
+    <ion-buttons style="display: flex; direction: row;" left>
+      <button ion-button *ngIf="this.mainFunc.manuno8 == false" (tap)="openCartPage2()">
           <ion-icon name="md-cart" *ngIf="this.mainFunc.manuno8 == false" [@cartBadge]="cartBadgeState"></ion-icon>
           <ion-badge color="danger" *ngIf="mainFunc.getCartItemsNumber()" [@flyInOut]="cartBadgeState" item-end>{{mainFunc.getCartItemsNumber()}}</ion-badge>
       </button>
     </ion-buttons>
     <!-- <ion-title>دانتجرام</ion-title> -->
     <img class="homeLogo" src="assets/img/homelogo.png">
-    <ion-buttons style="display: flex; direction: row;" end>
-      <button ion-button menuToggle end>
+    <ion-buttons style="display: flex; direction: row;" right>
+      <button ion-button menuToggle>
         <!-- <ion-icon name="menu"></ion-icon> -->
       <img src="assets/img/avatar.png" class="avatar-menu-icon">
       </button>
-      <!-- <button ion-button (tap)="showSearchBar()" end>
+      <!-- <button ion-button (tap)="showSearchBar()">
           <ion-icon name="search"></ion-icon>
       </button> -->
     </ion-buttons>
@@ -37,22 +37,22 @@
 
 <ion-header *ngIf="this.platform.dir() === 'ltr'" dir="rtl" class="header" no-border>
     <ion-navbar class="ion-navbar" color="darkprimary" *ngIf="!isSearchToggle">
-      <ion-buttons style="display: flex; direction: row;" start>
-        <button ion-button *ngIf="this.mainFunc.manuno8 == false" (tap)="openCartPage2()" start>
+      <ion-buttons style="display: flex; direction: row;" left>
+        <button ion-button *ngIf="this.mainFunc.manuno8 == false" (tap)="openCartPage2()">
             <ion-icon name="md-cart" *ngIf="this.mainFunc.manuno8 == false" [@cartBadge]="cartBadgeState"></ion-icon>
             <ion-badge color="danger" *ngIf="mainFunc.getCartItemsNumber()" [@flyInOut]="cartBadgeState" item-end>{{mainFunc.getCartItemsNumber()}}</ion-badge>
         </button>
       </ion-buttons>
       <!-- <ion-title>دانتجرام</ion-title> -->
       <img class="homeLogo" src="assets/img/homelogo.png">
-      <ion-buttons style="display: flex; direction: row;" end>
-        <button ion-button menuToggle end>
+      <ion-buttons style="display: flex; direction: row;" right>
+        <button ion-button menuToggle >
           <!-- <ion-icon name="menu"></ion-icon> -->
       <img src="assets/img/avatar.png" class="avatar-menu-icon">
         </button>
-        <button *ngIf="this.mainFunc.manuno8 == false" ion-button (tap)="showSearchBar()" end>
+        <!-- <button *ngIf="this.mainFunc.manuno8 == false" ion-button (tap)="showSearchBar()">
             <ion-icon name="search"></ion-icon>
-        </button>
+        </button> -->
       </ion-buttons>
     </ion-navbar>
     <!-- <ion-toolbar class="toolbar" color="primary">
