--- a/src/pages/item-details/item-details.html
+++ b/src/pages/item-details/item-details.html
@@ -1,8 +1,8 @@
 <ion-header class="header"  dir="{{direc}}" no-border>
 
     <ion-navbar color="darkprimary">
-      <ion-buttons style="display: flex; direction: row;" end>
-        <button ion-button *ngIf="this.mainFunc.manuno8 == false" (tap)="openCartPage2()" start>
+      <ion-buttons style="display: flex; direction: row;" left>
+        <button ion-button *ngIf="this.mainFunc.manuno8 == false" (tap)="openCartPage2()">
             <ion-badge color="danger" *ngIf="mainFunc.getCartItemsNumber()" item-end>{{mainFunc.getCartItemsNumber()}}</ion-badge>
             <ion-icon name="md-cart" *ngIf="this.mainFunc.manuno8 == false"></ion-icon>
         </button>
