--- a/src/pages/used-ads-list/used-ads-list.html
+++ b/src/pages/used-ads-list/used-ads-list.html
@@ -1,26 +1,26 @@
 <ion-header *ngIf="this.platform.dir() === 'rtl'" class="header" dir="ltr" no-border>
   <ion-navbar class="ion-navbar" hideBackButton="true" color="darkprimary" *ngIf="!isSearchToggle">
-    <ion-buttons style="display: flex; direction: row;" start>
+    <ion-buttons style="display: flex; direction: row;" left>
 
-      <button ion-button *ngIf="this.mainFunc.manuno8 == false" (tap)="openCartPage2()" start>
+      <button ion-button *ngIf="this.mainFunc.manuno8 == false" (tap)="openCartPage2()">
         <ion-icon name="md-cart" *ngIf="this.mainFunc.manuno8 == false" [@cartBadge]="cartBadgeState"></ion-icon>
         <ion-badge color="danger" *ngIf="mainFunc.getCartItemsNumber()" [@flyInOut]="cartBadgeState" item-end>{{mainFunc.getCartItemsNumber()}}</ion-badge>
       </button>
-      <button ion-button (tap)="showSearchBar()" end>
+      <button ion-button (tap)="showSearchBar()">
         <ion-icon name="search"></ion-icon>
       </button>
     </ion-buttons>
     <!-- <ion-title>دانتجرام</ion-title> -->
     <!-- <img class="homeLogo" src="assets/img/homelogo.png"> -->
-    <ion-buttons style="display: flex; direction: row;" end>
-      <!-- <button ion-button menuToggle end>
+    <ion-buttons style="display: flex; direction: row;" right>
+      <!-- <button ion-button menuToggle>
         <ion-icon name="menu"></ion-icon>
       </button> -->
 
 
       <span *ngIf="this.platform.dir() === 'rtl' && this.mainFunc.manuno8 == false">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
       <span *ngIf="this.platform.dir() === 'ltr' && this.mainFunc.manuno8 == false">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-      <button ion-button icon-only (tap)="dismissview(catId)" end>
+      <button ion-button icon-only (tap)="dismissview(catId)">
         <ion-icon *ngIf="this.platform.dir() === 'rtl'" name="ios-arrow-back"></ion-icon>
         <ion-icon *ngIf="this.platform.dir() === 'ltr'" name="ios-arrow-forward"></ion-icon>
       </button>
@@ -43,19 +43,20 @@
 
 <ion-header *ngIf="this.platform.dir() === 'ltr'" dir="rtl" class="header" no-border>
   <ion-navbar class="ion-navbar" hideBackButton="true" color="darkprimary" *ngIf="!isSearchToggle">
-    <ion-buttons style="display: flex; direction: row;" end>
-      <button ion-button *ngIf="this.mainFunc.manuno8 == false" (tap)="openCartPage2()" start>
+    <ion-buttons style="display: flex; direction: row;" left>
+      <button ion-button *ngIf="this.mainFunc.manuno8 == false" (tap)="openCartPage2()">
         <ion-icon name="md-cart" *ngIf="this.mainFunc.manuno8 == false" [@cartBadge]="cartBadgeState"></ion-icon>
         <ion-badge color="danger" *ngIf="mainFunc.getCartItemsNumber()" [@flyInOut]="cartBadgeState" item-end>{{mainFunc.getCartItemsNumber()}}</ion-badge>
       </button>
+      <button ion-button (tap)="showSearchBar()">
+          <ion-icon name="search"></ion-icon>
+        </button>
     </ion-buttons>
     <!-- <ion-title>دانتجرام</ion-title> -->
     <img class="homeLogo" src="assets/img/homelogo.png">
-    <ion-buttons style="display: flex; direction: row;" end>
+    <ion-buttons style="display: flex; direction: row;" right>
 
-      <button ion-button (tap)="showSearchBar()" end>
-        <ion-icon name="search"></ion-icon>
-      </button>
+      
       <span *ngIf="this.platform.dir() === 'ltr' && this.mainFunc.manuno8 == false">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
       <button ion-button icon-only (tap)="dismissview(catId)">
         <ion-icon *ngIf="this.platform.dir() === 'rtl'" name="ios-arrow-back"></ion-icon>
