add avatar on navigation

--- a/src/pages/auth-create/auth-create.html
+++ b/src/pages/auth-create/auth-create.html
@@ -5,7 +5,8 @@
     <ion-buttons style="display: flex; direction: row;" right>
       <button ion-button menuToggle>
           <!-- <ion-icon name="menu"></ion-icon> -->
-          <img src="assets/img/avatar.png" class="avatar-menu-icon">
+          <img class="avatar-menu-icon" [src]="this.thumb == null ? 'assets/img/avatar.png' : this.thumb" onerror="src = 'assets/img/avatar.png'">
+
       </button>
     </ion-buttons>
     <ion-title>{{ 'AUTH_CREATE_PAGE' | translate:param }}</ion-title>
