--- a/src/pages/buy-categories-sub/buy-categories-sub.html
+++ b/src/pages/buy-categories-sub/buy-categories-sub.html
@@ -16,6 +16,7 @@
         <button ion-button menuToggle >
           <!-- <ion-icon name="menu"></ion-icon> -->
       <img src="assets/img/avatar.png" class="avatar-menu-icon">
+      <img [src]="this.thumb == null ? 'assets/img/avatar.png' : this.thumb" onerror="src = 'assets/img/avatar.png'" class="avatar-menu-icon">
         </button>
        
         
