--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -11,7 +11,7 @@
     <ion-buttons style="display: flex; direction: row;" right>
       <button ion-button menuToggle>
         <!-- <ion-icon name="menu"></ion-icon> -->
-      <img src="assets/img/avatar.png" class="avatar-menu-icon">
+      <img [src]="this.thumb == null ? 'assets/img/avatar.png' : this.thumb" onerror="src = 'assets/img/avatar.png'" class="avatar-menu-icon">
       </button>
       <!-- <button ion-button (tap)="showSearchBar()">
           <ion-icon name="search"></ion-icon>
@@ -48,7 +48,7 @@
       <ion-buttons style="display: flex; direction: row;" right>
         <button ion-button menuToggle >
           <!-- <ion-icon name="menu"></ion-icon> -->
-      <img src="assets/img/avatar.png" class="avatar-menu-icon">
+      <img [src]="this.thumb == null ? 'assets/img/avatar.png' : this.thumb" onerror="src = 'assets/img/avatar.png'" class="avatar-menu-icon">
         </button>
         <!-- <button *ngIf="this.mainFunc.manuno8 == false" ion-button (tap)="showSearchBar()">
             <ion-icon name="search"></ion-icon>
