--- a/src/pages/stores/stores.html
+++ b/src/pages/stores/stores.html
@@ -5,7 +5,8 @@
     <ion-buttons style="display: flex; direction: row;" right>
       <button ion-button menuToggle>
           <!-- <ion-icon name="menu"></ion-icon> -->
-      <img src="assets/img/avatar.png" class="avatar-menu-icon">
+      <img src="assets/img/avatar.png">
+      <img [src]="this.thumb == null ? 'assets/img/avatar.png' : this.thumb" onerror="src = 'assets/img/avatar.png'" class="avatar-menu-icon">
       </button>
     </ion-buttons>
     <ion-title text-center>{{ 'STORES_TITLE' | translate:param }}</ion-title>
