--- a/src/pages/courses-details/courses-details.html
+++ b/src/pages/courses-details/courses-details.html
@@ -48,8 +48,8 @@
             <ion-icon name='md-stats'></ion-icon>
             <div style="color: #555555;">{{ allData.level }}</div>
           </button>
-        </ion-col>
-        <ion-col text-center>
+        </ion-col> 
+        <ion-col text-center *ngIf="isLogged">
             <button ion-button clear small icon-start *ngIf="!mainFunc.checkItemInFav(allData.id)" (click)="addToFav(allData.id)">
               <ion-icon  name ="heart-outline" ></ion-icon>
             </button>
