hide categories bar, add changes in UI

--- a/src/pages/buy-sell-main/buy-sell-main.html
+++ b/src/pages/buy-sell-main/buy-sell-main.html
@@ -112,7 +112,7 @@
       </div>
 
 
-      <div class="wrapperlist">
+      <!-- <div class="wrapperlist">
         <div center>
           <div class="boxlist" *ngIf="this.mainFunc.manuno7 == true">
             <div class="box2list bg6" style="width: 100%;" (tap)="click_Open_categories()">
@@ -146,7 +146,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
   
 
 
