--- a/src/pages/courses-list/courses-list.html
+++ b/src/pages/courses-list/courses-list.html
@@ -82,7 +82,7 @@
 </ion-header>
 
 <div class="fixed-header">
-  <div *ngIf="this.catId == 0" class="wrapperlist">
+  <!-- <div *ngIf="this.catId == 0" class="wrapperlist">
     <div center>
       <div class="boxlist">
         <div class="box2list bg6" style="width: 100%;" (tap)="click_Open_Page(this.secretid)">
@@ -96,7 +96,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 
   <div *ngIf="slider_Data_Store.length > 0" class="slide-img-size" dir="ltr">
     <div>
