--- a/src/pages/match-making-list/match-making-list.html
+++ b/src/pages/match-making-list/match-making-list.html
@@ -91,7 +91,7 @@
   <div *ngIf="!isSearchToggle">
   <!--  Home Page Slider  -->
 
-      <div *ngIf="this.catId == 0" class="wrapperlist">
+      <!-- <div *ngIf="this.catId == 0" class="wrapperlist">
         <div center>
           <div class="boxlist">
             <div class="box2list bg6" style="width: 100%;" (tap)="click_Open_Category()">
@@ -106,7 +106,7 @@
           </div>    
         </div>
       </div>
-      
+       -->
       <div *ngIf="slider_Data_Store.length > 0" class="slide-img-size" dir="ltr">
           <div>
               <ion-slides speed="500" loop="true" spaceBewteen = "15" pager>
