--- a/src/pages/used-ads-list/used-ads-list.html
+++ b/src/pages/used-ads-list/used-ads-list.html
@@ -78,7 +78,7 @@
   </div>
 </ion-header>
 <div class="fixed-header">
-  <div *ngIf="this.catId == 0" class="wrapperlist">
+  <!-- <div *ngIf="this.catId == 0" class="wrapperlist">
     <div center>
       <div class="boxlist">
         <div class="box2list bg6" style="width: 100%;" (tap)="click_Open_Category()">
@@ -92,7 +92,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
   <div *ngIf="slider_Data.length > 0" class="slide-img-size" dir="ltr">
     <div>
       <ion-slides id="slider" (ionSlideDidChange)="slideChanged()" speed="500" loop="true" spaceBewteen="15" pager>
