--- a/src/pages/courses-details/courses-details.html
+++ b/src/pages/courses-details/courses-details.html
@@ -54,7 +54,7 @@
               <ion-icon  name ="heart-outline" ></ion-icon>
             </button>
 
-            <button ion-button clear small icon-start *ngIf="mainFunc.checkItemInFav(allData.id)" (click)="removeFromFav(allData.id)">
+            <button ion-button clear small icon-start *ngIf="mainFunc.checkItemInFav(allData.id)" (click)="addToFav(allData.id)">
                 <ion-icon  name ="md-heart" ></ion-icon>
             </button>
           </ion-col>
