--- a/src/pages/used-ads-list/used-ads-list.html
+++ b/src/pages/used-ads-list/used-ads-list.html
@@ -78,6 +78,66 @@
   </div>
 </ion-header>
 <div class="fixed-header">
+
+    <!-- <div class="wrapperlist">
+        <ion-row style="padding-left: 3px; padding-right: 8px;" no-lines no-padding>
+            <ion-col no-lines col-12 *ngIf="showFilter">
+                <ion-item dir="{{dir}}" class="selectDiv titleDiv" no-lines>
+                  <ion-label class="bg10">{{ 'FILTER_BY' | translate:param }}</ion-label>
+                  <ion-select interface="popover" class="bg10" dir="{{dir}}" (ionChange)="onFilterByChange($event)" [(ngModel)]="filterBy">
+                    <ion-option *ngFor="let op of filterOptions" [value]="op">{{ op | translate:param }}</ion-option>
+                  </ion-select>
+                </ion-item>
+            </ion-col>
+
+              <ion-col *ngIf="filterBy == 'LOCATION_FILTER'">
+                  <ion-item dir="{{dir}}" class="selectDiv titleDiv" no-lines>
+                    <ion-label class="bg10">{{ 'CHOOSE_CITY' | translate:param }}</ion-label>
+                    <ion-select interface="popover" class="bg10" dir="{{dir}}" (ionChange)="onFilterByValueChange($event)" [(ngModel)]="filterByValue">
+                      <ion-option *ngFor="let c of city_list; let i = index" [value]="c.id">{{ platform.dir() === 'ltr'? c.name_en: c.name_ar }}</ion-option>
+                    </ion-select>
+                  </ion-item>
+              </ion-col>
+
+              <ion-col *ngIf="filterBy == 'CATEGORY_FILTER'">
+                  <ion-item dir="{{dir}}" class="selectDiv titleDiv" no-lines>
+                    <ion-label class="bg10">{{ 'CHOOSE_CATEGORY' | translate:param }}</ion-label>
+                    <ion-select interface="popover" class="bg10" dir="{{dir}}" (ionChange)="onFilterByValueChange($event)" [(ngModel)]="filterByValue">
+                      <ion-option *ngFor="let c of category_list; let i = index" [value]="c.id">{{ platform.dir() === 'ltr'? c.name_en: c.name_ar }}</ion-option>
+                    </ion-select>
+                  </ion-item>
+                </ion-col>
+            
+                <ion-col *ngIf="filterBy == 'COURSE_PROVIDER_FILTER'">
+                  <ion-item dir="{{dir}}" class="selectDiv titleDiv" no-lines>
+                    <ion-label class="bg10">{{ 'CHOOSE_COURSE_PROVIDER' | translate:param }}</ion-label>
+                    <ion-input class="bg10" dir="{{dir}}" [(ngModel)]="filterByValue" (ionChange)="onFilterByValueChange($event)"></ion-input>
+                  </ion-item>
+                </ion-col>
+
+                <ion-col *ngIf="filterBy == 'DATE_FILTER'">
+                    <ion-item dir="{{dir}}" class="selectDiv titleDiv" no-lines>
+                      <ion-label class="bg10">{{ 'CHOOSE_DATE' | translate:param }}</ion-label>
+                      <ion-datetime class="bg10" dir="{{dir}}" displayFormat="MM/DD/YYYY" [(ngModel)]="filterByValue" cancelText="{{ 'CANCEL' | translate:param }}"
+                        doneText="{{ 'OK' | translate:param }}" (ionChange)="onFilterByValueChange($event)"></ion-datetime>
+                    </ion-item>
+                  </ion-col>
+              
+                  <ion-col col-9 no-lines>
+                    <ion-searchbar no-lines [(ngModel)]="searchTerm" placeholder="{{ 'SEARCH' | translate:param }}" [formControl]="searchControl"
+                      (ionInput)="onSearchInput()"></ion-searchbar>
+                  </ion-col>
+                  <ion-col no-lines col-3>
+                    <button ion-button style="width: fit-content;" color="darkprimary" (tap)="openSearchResultPage()">{{ 'SEARCH' | translate:param }}</button>
+                  </ion-col>
+
+
+        </ion-row>
+    </div>
+
+    <div *ngIf="searching" class="spinner-container">
+        <ion-spinner></ion-spinner>
+    </div> -->
   <!-- <div *ngIf="this.catId == 0" class="wrapperlist">
     <div center>
       <div class="boxlist">
